--- a/.env
+++ b/.env
@@ -1,5 +1,25 @@
-APP_IMAGE=gdcc/dataverse:unstable
+HOST_NAME=dataverse.itrend.cl
+
+APP_IMAGE=itrnedcl-dataverse:6.2
+APP_PROVIDER=itrendcl-dataverse
+APP_VERSION=6.2
+
+BLOCKED_API_KEY=itrendcl-2024
+
 POSTGRES_VERSION=16
 DATAVERSE_DB_USER=dataverse
 SOLR_VERSION=9.3.0
 SKIP_DEPLOY=0
+DATAVERSE_RELEASE=6.2
+
+
+GOOGLE_CLIENT_ID=XXXXX
+GOOGLE_CLIENT_SECRET=XXXXX
+
+# AWS settings
+# https://guides.dataverse.org/en/latest/installation/config.html#id90
+AWS_BUCKET_NAME=bucket-name
+AWS_REGION=us-east-1
+AWS_S3_PROFILE=default
+AWS_ACCESS_KEY=AKIAXXXXXXXXX
+AWS_SECRET_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
