--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -27,7 +27,7 @@ FROM $BASE_IMAGE
 # Make Payara use the "ct" profile for MicroProfile Config. Will switch various defaults for the application
 # setup in META-INF/microprofile-config.properties.
 # See also https://download.eclipse.org/microprofile/microprofile-config-3.0/microprofile-config-spec-3.0.html#configprofile
-ENV MP_CONFIG_PROFILE=ct
+ENV MP_CONFIG_PROFILE=itrend
 
 # Workaround to configure upload directories by default to useful place until we can have variable lookups in
 # defaults for glassfish-web.xml and other places.
@@ -39,6 +39,10 @@ COPY --chown=payara:payara maven/deps ${DEPLOY_DIR}/dataverse/WEB-INF/lib/
 COPY --chown=payara:payara maven/app ${DEPLOY_DIR}/dataverse/
 COPY --chown=payara:payara maven/supplements ${DEPLOY_DIR}/dataverse/supplements/
 COPY --chown=payara:payara maven/scripts ${SCRIPT_DIR}/
+
+COPY --chown=payara:payara itrend-setup/ ${HOME_DIR}/itrend-setup/
+RUN chmod +x ${HOME_DIR}/itrend-setup/*.sh
+
 RUN chmod +x "${SCRIPT_DIR}"/*
 
 # Create symlinks for jHove
