--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -8,6 +8,10 @@ dataverse.build=
 %ct.dataverse.fqdn=localhost
 %ct.dataverse.siteUrl=http://${dataverse.fqdn}:8080
 
+%itrend.dataverse.fqdn=${HOST_NAME}
+%itrend.dataverse.siteUrl=https://${dataverse.fqdn}
+
+
 # FILES
 # NOTE: The following uses STORAGE_DIR for both containers and classic installations. When defaulting to
 #       "com.sun.aas.instanceRoot" if not present, it equals the hardcoded default "." in glassfish-web.xml
@@ -23,7 +27,7 @@ dataverse.files.globus-cache-maxage=5
 # SEARCH INDEX
 dataverse.solr.host=localhost
 # Activating mp config profile -Dmp.config.profile=ct changes default to "solr" as DNS name
-%ct.dataverse.solr.host=solr
+dataverse.solr.host=solr
 dataverse.solr.port=8983
 dataverse.solr.protocol=http
 dataverse.solr.core=collection1
