--- a/modules/container-base/pom.xml
+++ b/modules/container-base/pom.xml
@@ -36,15 +36,20 @@
     
     <profiles>
         <profile>
-            <id>ct</id>
+            <id>itrend</id>
             <properties>
                 <packaging.type>docker-build</packaging.type>
-                <base.image>gdcc/base:${base.image.tag}</base.image>
-                <base.image.tag>unstable</base.image.tag>
+                <app.registry.name>itrendcl-dataverse</app.registry.name>
+
+                <base.image>${app.registry.name}/base:${base.image.tag}</base.image>
+                <base.image.tag>${revision}</base.image.tag>
+
                 <java.image>eclipse-temurin:${target.java.version}-jre</java.image>
+
                 <base.image.uid>1000</base.image.uid>
                 <base.image.gid>1000</base.image.gid>
-                <docker.platforms>linux/amd64,linux/arm64</docker.platforms>
+
+                <docker.platforms>linux/amd64</docker.platforms>
             </properties>
             
             <build>
